# XzalgoChain

./: .clang-format  ALGORITHM.md  API.md  CMakeLists.txt  CONTRIBUTING.md  INTEGRATION.md  INTEGRATION_WASM.md  LICENSE  Makefile  Makefile.win  NOTICE  README.md  TEST.md  Version  wasm-build.sh  xzalgo320sum.c  xzalgochain.c  xzalgochain_wasm.c
XzalgoChain/: XzalgoChain.h  algorithm.h  algorithm_scalar.h  algorithm_simd-avx2.h  algorithm_simd-neon.h  algorithm_simd.h  config.h  platform_detect.h  simd_detect.h  utils.h  xz_csprng.h
tests/: Makefile  avalanche_test.c  benchmark.c  bic_test.c  bit_bias_analyzer.c  consistent_test.c  cross_correlation_test.c  differential_test.c  dot_test.c  entropy_test.c  hash_counter.c  linear_correlation_test.c  permutation_compression_test.c  sac_test.c
wasm-demo/: index.css  index.html  index.js
wasm-demo/wasm/: XzalgoChain.js  XzalgoChain.wasm
